Fixing how the modal is displayed on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,5 @@
 @import '~bootstrap/scss/bootstrap';
 
-* {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
 $pure-white: #fff;
 $path-color: #aaa;
 $root-node-bg-color: #2c79ef;
@@ -14,6 +8,14 @@ $factory-node-bg-color: #659df0;
 $child-node-color: #555;
 $modal-bg-color: rgba(0, 0, 0, .85);
 $modal-label-color: #555;
+
+$mobile-breakpoint: 576px;
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
 .root-node {
   &__title {
@@ -142,6 +144,10 @@ $modal-label-color: #555;
     padding: 50px;
     width: 50%;
     z-index: 99999;
+
+    @media only screen and (max-width: $mobile-breakpoint) {
+      width: 85%;
+    }
   }
 
   &__input {
@@ -150,7 +156,7 @@ $modal-label-color: #555;
   }
 
   button {
-    margin: 0 10px;
+    margin: 0 10px 10px 0;
   }
 
   &__button-wrapper {
